--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required(VERSION 2.8.9)
+
+# find_package( Bullet REQUIRED )
+# include_directories(${BULLET_INCLUDE_DIR} )
+
 project (hello)
 add_executable(hello src/hello.cpp)
